tests/neg-custom-args/captures/except-wf.check
-- Error: tests/neg-custom-args/captures/except-wf.scala:7:19 ----------------------------------------------------------
7 |def foo(x: Object^{any.except[Async]}) = ??? // error
  |                   ^^^^^^^^^^^^^^^^^
  |               any.except[Async] is not well-formed since class Async is not a classifier class.
  |               A classifier class is a class extending `caps.Capability` and directly extending `caps.Classifier`.
