tests/neg-custom-args/captures/except-wf.scala
import caps.*

class Async extends SharedCapability

class IO extends SharedCapability, Classifier

def foo(x: Object^{any.except[Async]}) = ??? // error
def bar(x: Object^{any.except[IO]}) = ??? // ok
